# Agentic-LLM-System-with-Self-Correction

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml
data/eval/: test_questions.json
docs/: architecture.md
scripts/: download_sample_papers.py  run_evaluation.py
src/: __init__.py  config.py
src/agents/: __init__.py  base.py  critic.py  generator.py  query_analyzer.py  refiner.py  retriever.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py
src/api/routes/: __init__.py  evaluation.py  health.py  ingest.py  query.py  sessions.py
src/evaluation/: __init__.py  confidence_scorer.py  hallucination_detector.py  llm_judge.py  metrics_collector.py  retrieval_metrics.py
src/ingestion/: embedder.py  image_captioner.py  parent_child_linker.py  pdf_parser.py  semantic_chunker.py
src/models/: __init__.py  llm_client.py  schemas.py
src/pipeline/: __init__.py  orchestrator.py
src/retrieval/: __init__.py  hybrid_search.py  llm_reranker.py  parent_expander.py
src/storage/: document_store.py  entity_graph.py  session_manager.py  vector_store.py
tests/: generate_test_pdf.py  test_ingestion.py  test_ollama_client.py  test_pipeline.py  test_retrieval.py  test_storage.py
