[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-rag-self-correction"
version = "1.0.0"
description = "Agentic RAG pipeline with multi-layer hallucination detection and self-correction"
authors = [{name = "Maitraiyee Bhatt", email = "maitraiyeebhatt@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.25.0",
    "chromadb>=0.6.0",
    "rank-bm25>=0.2.2",
    "numpy>=2.0.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.18",
    "apscheduler>=3.10.0",
    "tiktoken>=0.8.0",
    "neo4j>=5.18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
